--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>goit-js-hw-08</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>goit-js-hw-08</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
     />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <ul class="gallery"></ul>
-
-    <script type="module" src="./js/gallery.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="js/gallery.js"></script>
   </body>
 </html>
